2008-06-06  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Use property instead of field.

2008-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* InternalWindowManager.cs, ThemeWin32Classic.cs: Removed useless Form.Icon
	null checks.

2008-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* Theme.cs: Added #region around the managed window code. Made the managed
	window methods abstract.
	* ThemeWin32Classic.cs: Added #region around the managed window code.

2008-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* InternalWindowManager.cs: Now only calls Theme.DrawManagedWindowDecorations
	if it has borders.
	* ThemeWin32Classic.cs: Removed HasBorders checks in
	DrawManagedWindowDecorations.

2008-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* InternalWindowManager.cs, Theme.cs, ThemeWin32Classic.cs: Refactored:
	Extracted ManagedWindowGetTitleBarIconArea.

2008-06-05  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCellStyle.cs: Don't clone the font.

2008-06-05  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Ensure we don't pass null to GetConverter.

2008-06-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* XplatUIX1..cs: Use IntPtr size instead of int, as wee need to work
	also on 64 bit machinges. Fixes the BadWindow errors while scrolling
	in 64 bit machines.

2008-06-05  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Correctly get converters for FormattedValue.
	Use Format/FormatProvider before trying converters.
	* DataGridViewCellStyle.cs: ApplyStyle should only apply things that
	are 'set'.  Change constructor to not use ApplyStyle since it wants
	everything applied.  Clone the Font.
	* DataGridViewRowHeaderCell.cs: Start with DefaultCellStyle and
	ApplyStyle the rest.

2008-06-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: We need to calculate the scrollbars even if the handle
	hasn't been created - this is needed when methods using scrollbars