@@ -1,5 +1,9 @@
 2008-06-06  Jonathan Pobst  <monkey@jpobst.com>
 
+	* DataGridViewCell.cs: Simplify GetInheritedStyle by using ApplyStyle.
+
+2008-06-06  Jonathan Pobst  <monkey@jpobst.com>
+
 	* DataGridViewCell.cs: Use property instead of field.
 
 2008-06-06  George Giolfan  <georgegiolfan@yahoo.com>
